modify step4 for other tools

--- a/code/refine bins/step4_comp_covg.ipynb
+++ b/code/refine bins/step4_comp_covg.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "584fb424",
    "metadata": {},
    "outputs": [],
@@ -44,48 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "24ee5af3",
    "metadata": {},
    "outputs": [],
    "source": [
     "initial_binning_tool = 'lrbinner'\n",
     "\n",
-    "exp = '../../../Results/zymo10_1000kto1100k/lrbinner/'\n",
-    "out2 = '../../../Results/zymo10_1000kto1100k/out_lrbinner/'\n",
-    "\n",
-    "# no matter what the initial tool is, at the end of 3 steps, this should be created\n",
-    "updated_clusters = np.load('../../../Results/zymo10_1000kto1100k/output/new_classes.npz') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "47603d88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_idx_maps(read_ids_file_path):\n",
-    "    read_id_idx = {}\n",
-    "    \n",
-    "    with open(read_ids_file_path) as read_ids_file:\n",
-    "        for rid in tqdm( read_ids_file):\n",
-    "            rid = rid.split(\" \")[0].strip()[1:]  #modified: rid = rid.strip()[1:] \n",
-    "            read_id_idx[rid] = len(read_id_idx)\n",
-    "    return read_id_idx\n",
-    "\n",
-    "\n",
-    "def alignments_to_edges(alignments_file_path, read_id_idx):\n",
-    "    edges = []\n",
-    "    with open(alignments_file_path, \"r\") as af:\n",
-    "        for line in tqdm(af):\n",
-    "            u, v = line.strip().split('\\t')\n",
-    "            if u != v:\n",
-    "                edges.append((read_id_idx[u], read_id_idx[v]))\n",
-    "    \n",
-    "    edges_nparr = np.array(edges, dtype=np.int32)\n",
-    "    # np.save(edges_npy_path, edges_arr)\n",
-    "    return edges_nparr"
+    "data_path = '../../../Results/ERR/lrbinner/'\n",
+    "output = '../../../Results/ERR/lrbinner/output/'"
    ]
   },
   {
@@ -98,48 +65,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "8bccd888",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100000it [00:00, 123690.50it/s]\n",
-      "144163it [00:00, 577573.52it/s]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100000, 42)\n"
+      "(791715, 42)\n"
      ]
     }
    ],
    "source": [
-    "if initial_binning_tool == 'lrbinner' or 'metabcc':\n",
-    "\n",
-    "    read_id_idx = get_idx_maps(exp + 'read_ids')\n",
-    "    edges = alignments_to_edges(exp + 'reads.alns', read_id_idx)\n",
-    "    \n",
-    "    comp = np.load(exp + \"profiles/com_profs.npy\")\n",
-    "    covg = np.load(exp + \"profiles/cov_profs.npy\")\n",
-    "    features_vec = np.concatenate((comp, covg), axis=1)\n",
-    "\n",
-    "    # read_cluster = np.loadtxt(exp + 'bins.txt', dtype=int)\n",
-    "\n",
+    "if initial_binning_tool == 'lrbinner' or initial_binning_tool=='metabcc':\n",
+    "    comp = np.load(data_path + \"profiles/com_profs.npy\")\n",
+    "    covg = np.load(data_path + \"profiles/cov_profs.npy\")\n",
+    "    read_cluster = np.load(output + 'new_classes.npy')\n",
     "else:\n",
-    "    # data = np.load(exp +  '/data.npz')\n",
-    "    edges = np.load(exp +  '/data.npz')['edges']\n",
-    "    comp = pd.read_csv(exp + \"4mers\", delimiter=',', header=None).to_numpy()\n",
+    "    comp = pd.read_csv(data_path + \"4mers\", delimiter=',', header=None).to_numpy()\n",
+    "    # TODO: RUN SEQ2COVVEC AND GET THE 16MERS FILE BEFORE THE BELOW STEP\n",
+    "    covg = pd.read_csv(data_path + \"16mers\", delimiter=' ', header=None).to_numpy() \n",
+    "    updated_clusters = np.load(output + 'new_classes.npz')\n",
+    "    read_cluster = updated_clusters['classes'] \n",
     "\n",
-    "    # RUN SEQ2COVVEC AND GET THE 16MERS FILE BEFORE THE BELOW STEP\n",
-    "    covg = pd.read_csv(exp + \"profiles/16mers\", delimiter=' ', header=None).to_numpy() \n",
-    "    features_vec = pd.concat([comp, covg], axis=1)\n",
-    "    \n",
-    "read_cluster = updated_clusters['classes']\n",
+    "edges = np.load(data_path +  'edges.npy')\n",
+    "features_vec = np.concatenate((comp, covg), axis=1)\n",
     "\n",
     "print(features_vec.shape)"
    ]
@@ -154,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "0b2f1b1a",
    "metadata": {},
    "outputs": [],
@@ -227,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "6804a32c",
    "metadata": {},
    "outputs": [],
@@ -265,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "ed5d7d36",
    "metadata": {},
    "outputs": [
@@ -273,14 +224,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[    2,  3395],\n",
-      "        [    2, 50755],\n",
-      "        [    2, 57235],\n",
+      "tensor([[     7, 556590],\n",
+      "        [     7, 106529],\n",
+      "        [     7, 638745],\n",
       "        ...,\n",
-      "        [93996, 47238],\n",
-      "        [97240, 45621],\n",
-      "        [97312, 45820]])\n",
-      "Data(x=[100000, 42], edge_index=[2, 144163])\n"
+      "        [791633, 566532],\n",
+      "        [791710, 746384],\n",
+      "        [791710, 537935]])\n",
+      "Data(x=[791715, 42], edge_index=[2, 16219138])\n"
      ]
     }
    ],
@@ -298,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "d65f213a",
    "metadata": {},
    "outputs": [
@@ -306,9 +257,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([100000])\n",
-      "tensor([0, 0, 0,  ..., 0, 0, 0])\n",
-      "1\n"
+      "torch.Size([790827])\n",
+      "tensor([2, 4, 0,  ..., 5, 6, 0])\n",
+      "12\n"
      ]
     }
    ],
@@ -340,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "9da6bf60",
    "metadata": {},
    "outputs": [],
@@ -351,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "1a240fad",
    "metadata": {},
    "outputs": [
@@ -369,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "05e843bf",
    "metadata": {},
    "outputs": [
@@ -381,11 +332,11 @@
       "-------------\n",
       " SAGE(\n",
       "  (convs): ModuleList(\n",
-      "    (0): SAGEConv(42, 21, aggr=mean)\n",
-      "    (1-2): 2 x SAGEConv(21, 21, aggr=mean)\n",
+      "    (0): SAGEConv(42, 27, aggr=mean)\n",
+      "    (1-2): 2 x SAGEConv(27, 27, aggr=mean)\n",
       "  )\n",
-      "  (fc1): Linear(in_features=21, out_features=21, bias=True)\n",
-      "  (fc2): Linear(in_features=21, out_features=1, bias=True)\n",
+      "  (fc1): Linear(in_features=27, out_features=27, bias=True)\n",
+      "  (fc2): Linear(in_features=27, out_features=12, bias=True)\n",
       ") \n",
       "-------------\n"
      ]
@@ -397,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "997cdb2a",
    "metadata": {},
    "outputs": [
@@ -432,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "96c76dda",
    "metadata": {},
    "outputs": [
@@ -440,8 +391,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([100000, 42])\n",
-      "torch.Size([100000])\n"
+      "torch.Size([791715, 42])\n",
+      "torch.Size([791715])\n"
      ]
     }
    ],
@@ -454,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "6b817708",
    "metadata": {},
    "outputs": [],
@@ -464,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "b9f6ae2b",
    "metadata": {},
    "outputs": [
@@ -1456,7 +1407,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='4e249ce8-1aae-4599-92bd-23a00d0b32d5'></div>"
+       "<div id='326b0d49-1296-4f41-ac02-ecdf31d73faa'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1469,9 +1420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 01, Loss: 0.0000\n",
-      "Early stopping, loss less than 0.02\n",
-      "\n"
+      "Epoch 02, Loss: 0.2603\r"
      ]
     }
    ],
@@ -1479,7 +1428,7 @@
     "%matplotlib notebook\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "epochs = 100\n",
+    "epochs = 20\n",
     "\n",
     "# for plotting\n",
     "fig = plt.figure()\n",
@@ -1516,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "ca07b080",
    "metadata": {
     "scrolled": true
@@ -1529,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "53a5210b",
    "metadata": {},
    "outputs": [],
@@ -1552,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "53b6d9a9",
    "metadata": {},
    "outputs": [],
@@ -1562,12 +1511,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "fe334cec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_file = out2 + 'updated_bins2.tsv'\n",
+    "out_file = output + 'updated_bins.tsv'\n",
     "\n",
     "classes_np = classes.numpy()\n",
     "\n",
@@ -1591,22 +1540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a6c627a3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'truth' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m idx \u001b[38;5;241m=\u001b[39m classification[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclassified\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      5\u001b[0m no_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mset\u001b[39m(classes))\n\u001b[0;32m----> 6\u001b[0m spec_set \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(\u001b[43mtruth\u001b[49m) \u001b[38;5;241m-\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnknown\u001b[39m\u001b[38;5;124m'\u001b[39m}\n\u001b[1;32m      9\u001b[0m matrix \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((\u001b[38;5;28mlen\u001b[39m(spec_set), no_classes))\n\u001b[1;32m     10\u001b[0m spec_idx \u001b[38;5;241m=\u001b[39m {s:n \u001b[38;5;28;01mfor\u001b[39;00m n, s \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(spec_set)}\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'truth' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "classification = np.load(exp + 'updated_classes.npz')\n",
     "\n",
